# XAC

./: LICENSE  README.md
kernel/: config_loader.c  config_loader.h  file_ops.c  file_ops.h  mac_xac.c  mac_xac.h  xac_common.c  xac_common.h
policies/: xac_sys  xac_usr.conf
xactl/: CMakeLists.txt  args_parser.cpp  args_parser.hpp  crypto_utils.cpp  crypto_utils.hpp  fs_utils.cpp  fs_utils.hpp  pin.cpp  pin.hpp  terminal.cpp  terminal.hpp  xac_common.cpp  xac_common.h  xac_lib.c  xac_lib.cpp  xac_lib.h  xac_log.h  xac_log.hpp  xac_ops.cpp  xac_ops.hpp  xac_parser.cpp  xac_parser.h  xactl.cpp
xactl/tests/: sbtest_c.cpp  sbtest_common.h  sbtest_p.cpp
